fixed spacing

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -162,8 +162,8 @@ p, li {
 }
 
 .icon {
-  padding-left:4px;
-  padding-right: 6px;
+  padding-left:2px;
+  padding-right: 8px;
 }
 
 #right p, #left p, #right li, #left li {
